# gimp_j2k

./: AUTHORS  ChangeLog  HACKING  Makefile  README  README.md  config.h  config.status  configure  configure.in  intltool-update  j2k-export.c  j2k-export.h  j2k-load.c  j2k-load.h  j2k.c  j2k.h  main.h  meson.build  read_j2k.c  write_j2k.c  write_j2k.h
help/: Makefile
help/en/: Makefile  index.html
help/images/: Makefile
po/: Makefile  Makefile.in  az.gmo  az.po  de.gmo  de.po  fr.gmo  fr.po  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  config.h  main.c  main.h  read_j2k.c  write_j2k.c  write_j2k.h
